--- a/app/src/main/res/layout/activity_cheat.xml
+++ b/app/src/main/res/layout/activity_cheat.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="24dp"
-            android:text="@string/warning_text" />
+            android:text="he" />
 
         <TextView
             android:id="@+id/answer_text_view"
@@ -28,7 +28,7 @@
             android:id="@+id/show_answer_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/show_answer_button" />
+            android:text="he" />
 
     </LinearLayout>
 
