--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -8,7 +8,7 @@
         android:id="@+id/question_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="24dp"/>
+        android:padding="24dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -26,20 +26,30 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/false_button" />
-        <Button
-            android:id="@+id/cheat_button"
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/prev_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/cheat_button"/>
+            android:layout_weight="1"
+            android:contentDescription="@string/prev_speak"
+            android:src="@drawable/arrow_left"/>
 
-        <Button
+
+        <ImageButton
             android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/next_button"
-            android:drawableRight="@drawable/arrow_right"
-            android:drawablePadding="4dp"/>
-
+            android:layout_weight="1"
+            android:contentDescription="@string/next_speak"
+            android:src="@drawable/arrow_right" />
     </LinearLayout>
 
 </LinearLayout>
